# ChangeLog for app-misc/dnetc
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.34 2006/01/03 22:53:48 voxus Exp $

*dnetc-2.9011.496-r1 (04 Jan 2006)

  04 Jan 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +dnetc-2.9011.496-r1.ebuild, +files/dnetc.init-r1:
  Merged ebuild changes suggested by Kristaps Kaupe
  <kristaps.kaupe@itrisinajumi.lv> in bug #104527.
  Also init-script converted to start-stop-daemon usage.

*dnetc-2.9011.496 (02 Aug 2005)

  02 Aug 2005; Martin Holzer <mholzer@gentoo.org> +dnetc-2.9011.496.ebuild:
  Version bumped.

*dnetc-2.9009.494 (01 Jan 2005)

  01 Jan 2005; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9007.489.ebuild,
  dnetc-2.9009.494.ebuild:
  Version bump, closing #68344.
  Fixed buffer flushing, should close #76178."

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  dnetc-2.9008.490.ebuild:
  Masked dnetc-2.9008.490.ebuild stable for ppc

  19 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9008.490.ebuild:
  Unmasked on x86.

  19 Jun 2004; Gustavo Zacarias <gustavoz@gentoo.org> dnetc-2.9008.490.ebuild:
  Sparc stable, support for ogr-p2

  15 Jun 2004; Daniel Ahlberg <aliz@gentoo.org> files/dnetc.init:
  Make initscript run before net, closing #53914.

  14 Jun 2004; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9007.489.ebuild:
  Unmasked on x86.

  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> dnetc-2.9001.478.ebuild,
  dnetc-2.9002.479.ebuild, dnetc-2.9003.481-r1.ebuild,
  dnetc-2.9005.483.ebuild, dnetc-2.9008.490.ebuild:
  Fix use invocation

  25 May 2004; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9008.490.ebuild:
  Added PPC client.

*dnetc-2.9008.490 (16 May 2004)

  16 May 2004; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9008.490.ebuild:
  Version bump.

*dnetc-2.9007.489 (13 May 2004)

  13 May 2004; Daniel Ahlberg <aliz@gentoo.org> dnetc-2.9007.489.ebuild:
  Version bump
