@@ -1,4 +1,4 @@
-MD5 7485000949e27cf66effd77ed17b6615 ChangeLog 4928
+MD5 2daad63cc0d04f77f6c5d8776a0e8947 ChangeLog 5204
 MD5 d8b1b2c172a5c975cc706ddf3200544c dnetc-2.9001.478.ebuild 1390
 MD5 4fa3dd1fb6994eb53356896cc5cbd7be dnetc-2.9002.479.ebuild 1386
 MD5 41ff63d1775394dc14ef29cc80794785 dnetc-2.9003.481-r1.ebuild 2037
@@ -7,6 +7,7 @@ MD5 c14d79f055b7884e91ebebd251c40526 dnetc-2.9008.490.ebuild 1732
 MD5 0172a621a8ae32df97a5da8957cb7a44 dnetc-2.9009.494.ebuild 1877
 MD5 505ec5f12dc493651d6bf2744633c262 dnetc-2.9011.496-r1.ebuild 2168
 MD5 d69e033d17ff48dbe483bb577e891552 dnetc-2.9011.496.ebuild 1880
+MD5 b13b231cfec4dc5547753b331cac921c dnetc-2.9011.497.ebuild 2037
 MD5 043cbafd6324fd3848f2763c32e6da51 files/digest-dnetc-2.9001.478 77
 MD5 a0b9b9b76588f355da0a87fc76aba6db files/digest-dnetc-2.9002.479 73
 MD5 3c0a7355f235e3df772e08c29a7cff7b files/digest-dnetc-2.9003.481-r1 370
@@ -15,7 +16,9 @@ MD5 de79a9083edb7a4acdbaadf8c6f55622 files/digest-dnetc-2.9008.490 223
 MD5 c1483bfbcdb311310a4497c13ffb3d1a files/digest-dnetc-2.9009.494 157
 MD5 1ab1d2e552a641b2f3f542d8f381adef files/digest-dnetc-2.9011.496 157
 MD5 99ea87493e77ed73f2f5aebefc99dd2a files/digest-dnetc-2.9011.496-r1 157
+MD5 c289301c87a41246582194ce10cda621 files/digest-dnetc-2.9011.497 81
 MD5 b6444acd5a6c235ffe17bb3b528f4bc4 files/dnetc.conf 54
 MD5 d91f255c5d2573f5487c9638177208b7 files/dnetc.init 811
 MD5 0326a133e12a6ecce8ae27a3a2b5ae30 files/dnetc.init-r1 939
+MD5 4ff0a8e14fa3f25dc77326b5b4ecd767 files/dnetc.init-r2 907
 MD5 37236013e0d26d43c6bff35a8a48e8ec metadata.xml 220
