@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/dnetc
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.34 2006/01/03 22:53:48 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.35 2006/01/15 16:34:23 voxus Exp $
+
+*dnetc-2.9011.497 (15 Jan 2006)
+
+  15 Jan 2006; Konstantin Arkhipov <voxus@gentoo.org> +files/dnetc.init-r2,
+  +dnetc-2.9011.497.ebuild:
+  Bump to prerelease client, several bugs mentioned in bug #117935 fixed.
+  Ebuild provided by Michael Hordijk <hoffbrinkle@hotmail.com>.
 
 *dnetc-2.9011.496-r1 (04 Jan 2006)
 
